Implemented Cloneable interface with clone() method for operators.