@@ -72,7 +72,7 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 	@Parameter( label= "\u03C3 of Gaussian", required = false, dataIOOrder=2,
 		direction= Parameter.Direction.IN, mode=ExpertMode.STANDARD, 
 	  description = "Std. deviation of Gaussian.")
-	protected Double gaussStdDev = new Double(2.0);
+	protected Double gaussStdDev = Double.valueOf(2.0);
 
 	/**
 	 * Height of the filter mask.
@@ -82,7 +82,7 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 	@Parameter( label= "Mask Height", required = false, dataIOOrder = 3,
 		direction= Parameter.Direction.IN, mode=ExpertMode.STANDARD, 
     description = "Height of the filter mask.")	
-	protected Integer height = new Integer(9);
+	protected Integer height = Integer.valueOf(9);
 
 	/**
 	 * Flag to invert filter mask.
@@ -125,6 +125,27 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 			throw new ALDOperatorException(OperatorExceptionType.VALIDATION_FAILED, 
 				"[ChaudhuriMatchedFilter2D] mask height is smaller than 3, " +
 					"please set it to a larger value!");
+	}
+
+	@Override
+	public ChaudhuriMatchedFilter2D clone() {
+		ChaudhuriMatchedFilter2D newOp;
+		try {
+			newOp = new ChaudhuriMatchedFilter2D();
+			// super class fields
+			newOp.inputImg = this.inputImg;
+			newOp.angle = this.angle;
+			newOp.mode = this.mode;
+			newOp.statusListeners = this.statusListeners;
+			// local fields
+			newOp.gaussStdDev = this.gaussStdDev;
+			newOp.height = this.height;
+			newOp.invertMask = this.invertMask;
+			newOp.normalizeMask = this.normalizeMask;
+			return newOp;
+		} catch (ALDOperatorException e) {
+			return null;
+		}
 	}
 
 	/**
@@ -195,7 +216,7 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 	 * @param s		Standard deviation {@latex.inline $\\sigma$}.
 	 */
 	public void setStandardDeviation(double s) {
-		this.gaussStdDev = new Double(s);
+		this.gaussStdDev = Double.valueOf(s);
 	}
 
 	/**
@@ -203,7 +224,7 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 	 * @param h		Height of mask.
 	 */
 	public void setHeight(int h) {
-		this.height = new Integer(h);
+		this.height = Integer.valueOf(h);
 	}
 	
 	/**
